# Tillerinobot

./: .gitignore  .gitmodules  .travis.yml  README.md  justfile  lombok.config  pom.xml  shell.nix  spotbugs-exclude.xml
.github/workflows/: build.yml
docs/: index.html  send-vs-receive.pde
docs/swagger/: index.html  swagger.yml
ppaddict-site/: .gitignore  README.md  lombok.config  pom.xml
ppaddict-site/src/main/: .gitignore  module.gwt.xml
ppaddict-site/src/main/resources/static/: error.html
ppaddict-site/src/main/webapp/: .gitignore  Ppaddict.html
ppaddict-site/src/main/webapp/WEB-INF/: .gitignore  web.xml
ppaddict-site/src/test/resources/: log4j2.xml
tillerinobot/: .gitignore  pom.xml
tillerinobot-dhall/: impl.dhall  language.dhall  use.dhall
tillerinobot-irc/: .dockerignore  Cargo.toml  Dockerfile  irc-checksum.sh  irc-run.sh  pom.xml
tillerinobot-irc/src/main/java/org/tillerino/ppaddict/chat/irc/: BotRunnerImpl.java  IrcHooks.java  IrcWriter.java  Main.java  Pinger.java
tillerinobot-irc/src/main/resources/: log4j2.xml
tillerinobot-irc/src/main/rust/: ircc.rs  main.rs  probes.rs  rabbit.rs
tillerinobot-irc/src/test/java/org/tillerino/ppaddict/chat/irc/: BotDirectIT.java  BotIT.java  DummyIT.java  EmbeddedIrcServerRule.java  FullBotTest.java  IrcContainer.java  IrcHooksTest.java  IrcTillerinobot.java  IrcWriterTest.java  KittehForNgircd.java  NgircdContainer.java
tillerinobot-irc/src/test/resources/: log4j2.xml
tillerinobot-irc/src/test/resources/irc/: ngircd.motd
tillerinobot-live/: .dockerignore  Cargo.toml  Dockerfile  README.md  live-checksum.sh  pom.xml
tillerinobot-live/src/main/java/org/tillerino/ppaddict/live/: HealthServlet.java  LiveActivityEndpoint.java  LiveMain.java
tillerinobot-live/src/main/resources/: log4j2.xml
tillerinobot-live/src/main/rust/: main.rs  rabbit.rs  websocket.rs
tillerinobot-live/src/test/java/org/tillerino/ppaddict/live/: AbstractLiveActivityEndpointTest.java  JettyWebsocketServerResource.java  LiveActivityEndpointTest.java  LiveActivityIT.java  LiveContainer.java  MemoryIT.java  RabbitMqContainer.java  RabbitMqContainerConnection.java
tillerinobot-live/src/test/resources/: log4j2.xml  logback-test.xml
tillerinobot-model/: pom.xml
tillerinobot-model/src/test/resources/: log4j.properties  log4j2.xml  logback-test.xml
tillerinobot-rabbit/: pom.xml
tillerinobot-rabbit/src/test/resources/: log4j2.xml  logback-test.xml
tillerinobot-tests/: pom.xml
tillerinobot-tests/src/test/resources/: log4j2.xml  logback-test.xml
tillerinobot-tests/src/test/resources/irc/: ngircd.conf
tillerinobot/src/main/openapi/: san-doku.json
tillerinobot/src/test/resources/: Daniel Ingram - Awesome as I Want to Be (cagmcpe) [20(ni)% Cooler].osu  Fujijo Seitokai Shikkou-bu - Best FriendS -TV Size- (Flask) [Fycho's Insane].osu  MOSAIC.WAV - Magical Pants (Short Ver.) (Imaginative) [look at bg].osu  beatmapIds.txt  log4j.properties  log4j2.xml  logback-test.xml  structure.sql
tillerinobot/src/test/resources/osutrack/: 2345.json  2756335.json  fartownik.json
tillerinobot/src/test/wiremock/__files/: api_get_user_best-a347195c-2c98-4a9e-a450-fd3199a8716b.json  api_v2_beatmaps_129891_scores-505f5984-9386-48ee-b510-bf4ba65d8e2a.json  api_v2_beatmaps_131891_scores-b59b0b75-765c-4f18-b809-f6bdc916e954.json  api_v2_beatmaps_328472_scores-38f55619-9974-4cfa-b96e-cca1a41c71da.json  api_v2_beatmaps_5047712_scores-bf272539-864f-4a14-8026-7e3d4281ba96.json  api_v2_beatmaps_663567_scores-dd5667ff-fbe4-485c-91fe-cf94085f7068.json  api_v2_users_2070907-6905a230-b6fe-47c9-b464-57f9279a7981.json  api_v2_users_2070907-883593d9-b9a5-4333-b986-930142d9b0e7.json  osu_129891-f97342a0-5ce9-4ed6-939f-540a43f566ff.txt  (+8 more)
(+558 files in other folders)
