[package]
name = "tillerinobot-irc"
# Version is irrelevant. We're hashing everything and tagging the Docker image with the hash.
version = "0.1.0"
authors = ["Tillerino <tillmann.gaida@gmail.com>"]
edition = '2021'

[dependencies]
tokio-amqp = { version = "2", default-features = false }
lapin = { version = "2", default-features = false }
tokio = { version = "1.2", features = [ "macros", "signal" ] }
tokio-stream = { version = "0.1", default-features = false }
serde_derive = { version = "1.0" }
serde_json = { version = "1.0" }
serde = { version = "1.0" }
lazy_static = "1.4"
irc = { version = "0.15", default-features = false, features = [ "ctcp" ] }
thiserror = "1"
warp = { version = "0.3", default-features = false }
uuid = { version = "1", features = [ "v4" ] }

[[bin]]
name = "main"
path = "src/main/rust/main.rs"